force-app/main/default/objects/Account_Risk_Event__e.object
<CustomObject>
    <description>Created to alert when accounts are in risk</description>
    <fields>
        <fullName>Account_Id__c</fullName>
        <description>Relationship to the account</description>
        <label>Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Shows the record name</description>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Id__c</fullName>
        <description>Keeps track of the account owner when the event was created</description>
        <label>Account Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Account Risk Event</label>
    <pluralLabel>Accounts Risk Events</pluralLabel>
</CustomObject>